--- a/Sprint3/HMTL/css/estilos.css
+++ b/Sprint3/HMTL/css/estilos.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
 }
 
+/** encabezado**/
 header {
   font-family: "Dosis", sans-serif; /* fuente principal*/
   background-color: ghostwhite;
@@ -47,26 +48,24 @@ h1 {
 .btn {
   border-style: dashed;
   position: relative;
-  float:right;
-  margin-top:20px;
-  margin-left: 20px;
-  margin-right: 20px;
-  padding: 15px 30 px;
-  color:rgb(80, 80, 80);
+  float: right;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 10px 10px;
+  color: rgb(80, 80, 80);
   font-size: 20px;
   font-weight: bold;
   text-decoration: none;
-  overflow:hidden;
+  overflow: hidden;
   transition: 0.2s;
-  
 }
 
 .btn:hover {
   background: #ab5dec;
   box-shadow: 0 0 10px #ab5dec, 0 0 40px #ab5dec, 0 0 80px #ab5dec;
-  transition-delay:0.3s;
+  transition-delay: 0.3s;
 }
-
 
 nav {
   width: 70%;
@@ -124,7 +123,152 @@ nav {
   opacity: 1;
 }
 
-.tabla {
+/** tablas **/
+.tabla div {
   font-family: "Varela", sans-serif;
   color: rgb(80, 80, 80);
+  margin: 150px auto;
+  border-collapse: collapse;
+  width: 600px;
+}
+
+h2 {
+  text-align: left;
+  font-size: 30px;
+  font-weight: bold;
+  color: #ab5dec;
+  margin: 30px 10px;
+}
+
+table {
+  background-color: white;
+  text-align: center;
+  width: 80%;
+  margin: auto;
+  border-style: double;
+}
+
+.btnsubmit {
+  margin: 0px;
+  padding: 0px;
+}
+
+th,
+td {
+  padding: 20px;
+}
+
+thead {
+  background-color: #3d1f72;
+  border-bottom: solid 5px #00ffe2;
+  color: #00ffe2;
+  text-align: center;
+  font-size: 20px;
+}
+
+tr:nth-child(even) {
+  background-color: #ddd;
+}
+
+tr:hover td {
+  background-color: #b6f7f2;
+  color: #3d1f72;
+  font-weight: bold;
+}
+
+.btntable {
+  position: relative;
+  text-align: center;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 15px 30 px;
+  color: rgb(80, 80, 80);
+  font-size: 15px;
+  font-weight: bold;
+  text-decoration: none;
+  overflow: hidden;
+  transition: 0.2s;
+}
+
+.btntable:hover {
+  background: #00ffe2;
+  box-shadow: 0 0 10px#00ffe2, 0 0 40px#00ffe2, 0 0 80px#00ffe2;
+  transition-delay: 0.2s;
+}
+
+/**formulario**/
+
+form {
+  padding: 10px;
+  color: rgb(80, 80, 80);
+  margin: 0 auto;
+  width: 90%;
+  border-radius: 3px;
+
+}
+
+input,
+select {
+  outline: none;
+  border-radius: 3px;
+  padding: 5px;
+  width: 170px;
+  margin-right: 20px;
+}
+
+input:focus {
+  border-color: #ab5dec;
+}
+
+select:focus {
+  border-color: #ab5dec;
+}
+
+.buscar{
+  padding: 9px 10px 9px 32px;
+  outline:none;
+  font: size 18px;
+  border-radius:25px;
+  width: 280px;
+}
+
+.buscar:hover{
+width:280px;
+border-color:#ab5dec ;
+box-shadow: 0 0 5px #3d1f72;
+}
+
+button{
+  color:#ab5dec;
+  font-weight: bold;
+  font-size:15px;
+  text-align: center;
+  padding: 5px 5px;
+  border:2px solid #3d1f72;
+  border-radius:10px;
+
+}
+
+
+.total{
+  margin: 0px 170px;
+  padding: auto;
+  float: right;
+}
+
+.btnoption {
+  float: right;
+  color:#ab5dec;
+  font-weight: bold;
+  font-size:15px;
+  text-align: center;
+  padding: 5px 5px;
+  margin: 10px 10px;
+  border:2px solid #3d1f72;
+  border-radius:10px;
+}
+
+.btnoption:hover{
+  background-color:#3d1f72;
 }
