--- a/Sprint3/HMTL/css/estilos.css
+++ b/Sprint3/HMTL/css/estilos.css
@@ -1,408 +1,431 @@
 * {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
+
 /** encabezado**/
+
 header {
-  font-family: "Dosis", sans-serif; /* fuente principal*/
-  background-color: ghostwhite;
-  width: 100%;
-  height: 70px;
+    font-family: "Dosis", sans-serif;
+    /* fuente principal*/
+    background-color: ghostwhite;
+    width: 100%;
+    height: 70px;
 }
 
 .ancho {
-  /*clases*/
-  width: 100%;
-  height: 70px;
-  margin: auto;
+    /*clases*/
+    width: 100%;
+    height: 70px;
+    margin: auto;
 }
 
 .logo {
-  width: 30%;
-  height: 70px;
-  float: left;
+    width: 30%;
+    height: 70px;
+    float: left;
 }
 
 img {
-  width: 150px;
-  height: 90px;
-  float: left;
-  margin-top: 5px;
-  margin-left: 30px;
+    width: 150px;
+    height: 90px;
+    float: left;
+    margin-top: 5px;
+    margin-left: 30px;
 }
 
 h1 {
-  float: left;
-  text-align: center;
-  font-size: 50px;
-  font-weight: bold;
-  color: #3d1f72;
-  font-family: "Seymour One", sans-serif;
-  margin-top: 10px;
+    float: left;
+    text-align: center;
+    font-size: 50px;
+    font-weight: bold;
+    color: #3d1f72;
+    font-family: "Seymour One", sans-serif;
+    margin-top: 10px;
 }
 
 .btn {
-  border-style: dashed;
-  position: relative;
-  float: right;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-  padding: 10px 10px;
-  color: rgb(80, 80, 80);
-  font-size: 20px;
-  font-weight: bold;
-  text-decoration: none;
-  overflow: hidden;
-  transition: 0.2s;
+    border-style: dashed;
+    position: relative;
+    float: right;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 10px 10px;
+    color: rgb(80, 80, 80);
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration: none;
+    overflow: hidden;
+    transition: 0.2s;
 }
 
 .btn:hover {
-  background: #ab5dec;
-  box-shadow: 0 0 10px #ab5dec, 0 0 40px #ab5dec, 0 0 80px #ab5dec;
-  transition-delay: 0.3s;
+    background: #ab5dec;
+    box-shadow: 0 0 10px #ab5dec, 0 0 40px #ab5dec, 0 0 80px #ab5dec;
+    transition-delay: 0.3s;
 }
 
 nav {
-  width: 70%;
-  height: 70px;
-  float: left;
-  text-align: center;
+    width: 70%;
+    height: 70px;
+    float: left;
+    text-align: center;
 }
 
 .navegacion {
-  width: 100%;
-  margin: 30px auto;
-  background: #3d1f72;
+    width: 100%;
+    margin: 30px auto;
+    background: #3d1f72;
 }
+
 .navegacion ul {
-  list-style: none;
+    list-style: none;
 }
 
-.menu > li {
-  position: relative;
-  display: inline-block;
+.menu>li {
+    position: relative;
+    display: inline-block;
 }
 
-.menu > li > a {
-  display: block;
-  padding: 15px 50px;
-  color: #ab5dec;
-  font-size: 30px;
-  font-weight: bold;
-  text-decoration: none;
+.menu>li>a {
+    display: block;
+    padding: 15px 50px;
+    color: #ab5dec;
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 .menu li a:hover {
-  color: #00ffe2;
-  transition: all 0.3s;
+    color: #00ffe2;
+    transition: all 0.3s;
 }
 
 .submenu {
-  position: absolute;
-  background: #3d1f72;
-  visibility: hidden;
-  opacity: 0;
-  transition: opacity 1.5s;
+    position: absolute;
+    background: #3d1f72;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 1.5s;
 }
 
 .submenu li a {
-  display: block;
-  padding: 15px;
-  color: #ab5dec;
-  font-weight: bold;
-  text-decoration: none;
+    display: block;
+    padding: 15px;
+    color: #ab5dec;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 .menu li:hover .submenu {
-  visibility: visible;
-  opacity: 1;
+    visibility: visible;
+    opacity: 1;
 }
 
+
 /** tablas **/
+
 .tabla div {
-  font-family: "Varela", sans-serif;
-  color: rgb(80, 80, 80);
-  margin: 150px auto;
-  border-collapse: collapse;
-  width: 600px;
+    font-family: "Varela", sans-serif;
+    color: rgb(80, 80, 80);
+    margin: 150px auto;
+    border-collapse: collapse;
+    width: 600px;
 }
 
 h2 {
-  text-align: left;
-  font-size: 30px;
-  font-weight: bold;
-  color: #ab5dec;
-  margin: 30px 10px;
+    text-align: left;
+    font-size: 30px;
+    font-weight: bold;
+    color: #ab5dec;
+    margin: 30px 10px;
 }
 
 table {
-  background-color: white;
-  text-align: center;
-  width: 80%;
-  margin: auto;
-  border-style: double;
+    background-color: white;
+    text-align: center;
+    width: 80%;
+    margin: auto;
+    border-style: double;
 }
 
 .btnsubmit {
-  margin: 0px;
-  padding: 0px;
+    margin: 0px;
+    padding: 0px;
 }
 
 th,
 td {
-  padding: 20px;
+    padding: 20px;
 }
 
 thead {
-  background-color: #3d1f72;
-  border-bottom: solid 5px #00ffe2;
-  color: #00ffe2;
-  text-align: center;
-  font-size: 20px;
+    background-color: #3d1f72;
+    border-bottom: solid 5px #00ffe2;
+    color: #00ffe2;
+    text-align: center;
+    font-size: 20px;
 }
 
 tr:nth-child(even) {
-  background-color: #ddd;
+    background-color: #ddd;
 }
 
 tr:hover td {
-  background-color: #b6f7f2;
-  color: #3d1f72;
-  font-weight: bold;
+    background-color: #b6f7f2;
+    color: #3d1f72;
+    font-weight: bold;
 }
 
 .btntable {
-  position: relative;
-  text-align: center;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-  padding: 15px 30 px;
-  color: rgb(80, 80, 80);
-  font-size: 15px;
-  font-weight: bold;
-  text-decoration: none;
-  overflow: hidden;
-  transition: 0.2s;
+    position: relative;
+    text-align: center;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 15px 30 px;
+    color: rgb(80, 80, 80);
+    font-size: 15px;
+    font-weight: bold;
+    text-decoration: none;
+    overflow: hidden;
+    transition: 0.2s;
 }
 
 .btntable:hover {
-  background: #00ffe2;
-  box-shadow: 0 0 10px#00ffe2, 0 0 40px#00ffe2, 0 0 80px#00ffe2;
-  transition-delay: 0.2s;
+    background: #00ffe2;
+    box-shadow: 0 0 10px#00ffe2, 0 0 40px#00ffe2, 0 0 80px#00ffe2;
+    transition-delay: 0.2s;
 }
+
 
 /**formulario**/
 
 form {
-  padding: 10px;
-  color: rgb(80, 80, 80);
-  margin: 0 auto;
-  width: 90%;
-  border-radius: 3px;
+    padding: 10px;
+    color: rgb(80, 80, 80);
+    margin: 0 auto;
+    width: 90%;
+    border-radius: 3px;
 }
 
 input,
 select {
-  outline: none;
-  border-radius: 3px;
-  padding: 5px;
-  width: 170px;
-  margin-right: 20px;
+    outline: none;
+    border-radius: 3px;
+    padding: 5px;
+    width: 170px;
+    margin-right: 20px;
 }
 
 input:focus {
-  border-color: #ab5dec;
+    border-color: #ab5dec;
 }
 
 select:focus {
-  border-color: #ab5dec;
+    border-color: #ab5dec;
 }
 
 .buscar {
-  padding: 9px 10px 9px 32px;
-  outline: none;
-  font: size 18px;
-  border-radius: 25px;
-  width: 280px;
+    padding: 9px 10px 9px 32px;
+    outline: none;
+    font: size 18px;
+    border-radius: 25px;
+    width: 280px;
 }
 
 .buscar:hover {
-  border-color: #ab5dec;
-  box-shadow: 0 0 5px #3d1f72;
+    border-color: #ab5dec;
+    box-shadow: 0 0 5px #3d1f72;
 }
 
 button {
-  color: #ab5dec;
-  font-weight: bold;
-  font-size: 15px;
-  text-align: center;
-  padding: 5px 5px;
-  border: 2px solid #3d1f72;
-  border-radius: 10px;
+    color: #ab5dec;
+    font-weight: bold;
+    font-size: 15px;
+    text-align: center;
+    padding: 5px 5px;
+    border: 2px solid #3d1f72;
+    border-radius: 10px;
 }
 
 button:hover {
-  border-color: #ab5dec;
-  box-shadow: 0 0 5px #3d1f72;
-  background-color:#3d1f72;
+    border-color: #ab5dec;
+    box-shadow: 0 0 5px #3d1f72;
+    background-color: #3d1f72;
 }
 
-
 .total {
-  margin: 0px 170px;
-  padding: auto;
-  float: right;
+    margin: 0px 170px;
+    padding: auto;
+    float: right;
 }
 
 .btnoption {
-  float: right;
-  color: #ab5dec;
-  font-weight: bold;
-  font-size: 15px;
-  text-align: center;
-  padding: 5px 5px;
-  margin: 10px 10px;
-  border: 2px solid #3d1f72;
-  border-radius: 10px;
+    float: right;
+    color: #ab5dec;
+    font-weight: bold;
+    font-size: 15px;
+    text-align: center;
+    padding: 5px 5px;
+    margin: 10px 10px;
+    border: 2px solid #3d1f72;
+    border-radius: 10px;
 }
 
 .btnoption:hover {
-  background-color: #3d1f72;
+    background-color: #3d1f72;
 }
 
 h3 {
-  text-align: center;
-  font-size: 30px;
-  font-weight: bold;
-  color: #ab5dec;
-  margin: 30px 10px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    color: #ab5dec;
+    margin: 30px 10px;
 }
 
 .integrantes {
-  text-align: center;
-  font-size: 20px;
-  color: rgb(80, 80, 80);
-  margin: 30px 10px;
+    text-align: center;
+    font-size: 20px;
+    color: rgb(80, 80, 80);
+    margin: 30px 10px;
 }
 
 p {
-  text-align: center;
-  font-size: 20px;
-  color: rgb(80, 80, 80);
-  margin: 30px 10px;
+    text-align: center;
+    font-size: 20px;
+    color: rgb(80, 80, 80);
+    margin: 30px 10px;
 }
 
 .col {
-  background: #3d1f72;
-  width: 100%;
-  height: 150px;
-  float: left;
-  text-align: center;
+    background: #3d1f72;
+    width: 100%;
+    height: 150px;
+    float: left;
+    text-align: center;
 }
 
 .col p {
-  color: #ab5dec;
-  font-size: 35px;
-  font-family: "Dosis", sans-serif;
+    color: #ab5dec;
+    font-size: 35px;
+    font-family: "Dosis", sans-serif;
 }
 
 .contactenos {
-  border-style: dashed;
-  position: relative;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-  padding: 10px 10px;
-  color: #00ffe2;
-  font-size: 20px;
-  font-weight: bold;
-  text-decoration: none;
-  overflow: hidden;
-  transition: 0.2s;
+    border-style: dashed;
+    position: relative;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 10px 10px;
+    color: #00ffe2;
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration: none;
+    overflow: hidden;
+    transition: 0.2s;
 }
 
 .contactenos:hover {
-  background: #ab5dec;
-  box-shadow: 0 0 10px #ab5dec, 0 0 40px #ab5dec, 0 0 80px #ab5dec;
-  transition-delay: 0.3s;
+    background: #ab5dec;
+    box-shadow: 0 0 10px #ab5dec, 0 0 40px #ab5dec, 0 0 80px #ab5dec;
+    transition-delay: 0.3s;
 }
 
 fieldset {
-  text-align: center;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-  padding: 20px 20px;
-  font-size: 20px;
-  font-weight: bold;
+    text-align: center;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 20px 20px;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .btninicio {
-  color: #ab5dec;
-  font-weight: bold;
-  font-size: 20px;
-  text-align: center;
-  padding: 5px 5px;
-  border: 2px solid #3d1f72;
-  border-radius: 10px;
+    color: #ab5dec;
+    font-weight: bold;
+    font-size: 20px;
+    text-align: center;
+    padding: 5px 5px;
+    border: 2px solid #3d1f72;
+    border-radius: 10px;
 }
 
 .btninicio:hover {
-  background-color: #3d1f72;
+    background-color: #3d1f72;
 }
 
 .proyecto {
-  background: #3d1f72;
-  margin-top: 20px;
-  width: 100%;
-  height: 80px;
-  float: left;
-  text-align: center;
+    background: #3d1f72;
+    margin-top: 20px;
+    width: 100%;
+    height: 80px;
+    float: left;
+    text-align: center;
 }
 
 .proyecto p {
-  color: #ab5dec;
-  font-size: 20px;
-  font-family: "Dosis", sans-serif;
-  font-weight: bold;
-
+    color: #ab5dec;
+    font-size: 20px;
+    font-family: "Dosis", sans-serif;
+    font-weight: bold;
 }
+
 .btdesde {
-  text-align: left;
-  font-size: 18px;
-  font-weight: bold;
-  color: #ab5dec;
-  margin: 40px 20px;
+    text-align: left;
+    font-size: 18px;
+    font-weight: bold;
+    color: #ab5dec;
+    margin: 40px 20px;
 }
+
 .bthasta {
-  text-align: left;
-  font-size: 18px;
-  font-weight: bold;
-  color: #ab5dec;
-  margin: 40px 20px;
+    text-align: left;
+    font-size: 18px;
+    font-weight: bold;
+    color: #ab5dec;
+    margin: 40px 20px;
 }
 
-.btconsultar{
-width:230px;
-border-color:#ab5dec ;
-box-shadow: 0 0 5px #3d1f72;
-}
-.btndes{
-  padding: 9px 10px 9px 32px;
-  outline:none;
-  font: size 18px;
-  border-radius:25px;
-  width: 280px;
+.btconsultar {
+    width: 230px;
+    border-color: #ab5dec;
+    box-shadow: 0 0 5px #3d1f72;
 }
 
-.btndes:hover{
-width:280px;
-border-color:#ab5dec ;
-box-shadow: 0 0 5px #3d1f72;
+.btndes {
+    padding: 9px 10px 9px 32px;
+    outline: none;
+    font: size 18px;
+    border-radius: 25px;
+    width: 280px;
+}
+
+.btndes:hover {
+    width: 280px;
+    border-color: #ab5dec;
+    box-shadow: 0 0 5px #3d1f72;
+}
+
+.success,
+.error {
+    color: white;
+    padding: 5px;
+    margin: 5px 0 15px 0;
+}
+
+.success {
+    background: green;
+}
+
+.error {
+    background: red;
 }
